--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
         // --- FIREBASE CONFIGURATION (Your Keys) ---
         const firebaseConfig = {
-            apiKey: "AIzaSyCWPbw_Rap695KLdYXfjOeFfidPXycsoDI",
-            authDomain: "studytracker-8f335.firebaseapp.com",
-            projectId: "studytracker-8f335",
-            storageBucket: "studytracker-8f335.firebasestorage.app",
-            messagingSenderId: "774486792552",
-            appId: "1:774486792552:web:cc70a4754db8e4f25c5edd",
-            measurementId: "G-DZJW6JHDQQ"
+            apiKey: "AIzaSyBrIzzkBX83WNhQg3JscBVdp2QIIAdOeEk",
+            authDomain: "study-tracker-12df3.firebaseapp.com",
+            projectId: "study-tracker-12df3",
+            storageBucket: "study-tracker-12df3.firebasestorage.app",
+            messagingSenderId: "958324817996",
+            appId: "1:958324817996:web:63ab303ce874bf2adfb4e9",
+            measurementId: "G-8Y8RJCE9VZ"
         };
 
         // Initialize Firebase
