Replace Firebase config placeholders with actual keys
Updated Firebase configuration with real API keys.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         // Note: When you host this on GitHub, you will replace 'JSON.parse...' with your real config object.
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
             // Placeholder: Replace this with your own keys from Firebase Console if hosting externally
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_APP.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
+            apiKey: "AIzaSyBrIzzkBX83WNhQg3JscBVdp2QIIAdOeEk",
+            authDomain: "study-tracker-12df3.firebaseapp.com",
+            projectId: "study-tracker-12df3",
         };
 
         const app = initializeApp(firebaseConfig);
